<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#E3F2FD"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="#fff"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="#fff"
            android:paddingLeft="20dp"
            android:paddingBottom="8dp"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_list"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:paddingLeft="20dp"
            android:paddingRight="40dp"
            android:paddingTop="5dp" />

    </LinearLayout>
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinnerFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="@drawable/rounded_edittext"
            android:padding="16dp"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/tableLayoutExpenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:stretchColumns="*">

                <TableRow
                    android:background="@drawable/table_border">
                    <TextView
                        android:text="@string/name"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textColor="#2196F3"/>
                    <TextView
                        android:text="@string/amount"
                        android:padding="8dp"
                        android:textColor="#2196F3"
                        android:textStyle="bold"/>
                    <TextView
                        android:text="@string/category"
                        android:padding="8dp"
                        android:textColor="#2196F3"
                        android:textStyle="bold"/>
                    <TextView
                        android:text="@string/date"
                        android:padding="8dp"
                        android:textColor="#2196F3"
                        android:textStyle="bold"/>
                </TableRow>

            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

    <TextView
        android:id="@+id/tvTotalExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total: ₹0.00"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="end"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:textColor="#2196F3" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:backgroundTint="#E3F2FD"
        android:gravity="bottom"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

</LinearLayout>
